Prevented links jumping

--- a/example/css/country.css
+++ b/example/css/country.css
@@ -41,6 +41,7 @@ h2 {
     font-size: 10vmin;
     margin-top: 2vmin;
     text-shadow: 1px 1px 0 rgba(0, 0, 0, .15);
+    height: 12vmin;
 }
 
 ul {
